# szucsi23

./: .gitignore  README.md
Orientation/week-07/day-2/: blocking_the_program.c  button_press_counter.c  flashing_led.c  morse.c  playing_wit_frequencies.c  toggle_led.c
Orientation/week-07/day-3/: better_knight_rider.c  flashing_leds.c  knight_rider.c  not_so_good_alternator.c
Orientation/week-07/day-4/: Railroad_sign.c  binary_button_counter.c  button_works.c  interrupt_button_works.c
Orientation/week-08/day-2/: dynamo.c
Orientation/week-08/day-3/: uart_morse.c
Orientation/week-08/day-4/: Temp_Sensor_with_Dot_Matrix_LED.c
Orientation/week-09/day-1/: RGB_Joystick_LED.c
Orientation/week-09/day-3/: Long_or_short_button_press.c  long_button_press.c
Orientation/week-09/day-4/: lighter.c
Orientation/week-09/day-5/: firat_attempt_at_random.c
Project/: week-0_Not_Working_Uart.c  week-0_speed_controlled_fan.c  week-0_totally_not_yet_working_uart_shit.c
week-01/day-2/dir2/: file2.txt
week-01/day-2/dir4/: file4.txt
week-01/day-2/dir5/: file5.txt
week-01/day-3/2-MorePrinting/: CMakeLists.txt  main.cpp
week-01/day-3/3-Variables/: main.cpp
week-01/day-3/4-cin and friends/: CMakeLists.txt
week-01/day-3/5-Conditions/: main.cpp
week-01/day-3/6-Loops/: CMakeLists.txt  main.cpp
week-01/day-3/7-PlusOne/: main.cpp
week-01/day-4/1-Functions/: CMakeLists.txt  main.cpp
week-01/day-4/2-Arrays-p1/: CMakeLists.txt  main.cpp
week-05/day-4/extension/: CMakeLists.txt  main.cpp
week-05/day-4/extension/extension_lib/: extension.cpp
(+318 files in other folders)
